# stuba-rrm

./: .gitignore  zadanie3_output2.csv
src/abb_irb4600_60_205_ikfast/: CMakeLists.txt  abb_irb4600_60_205_manipulator_moveit_ikfast_plugin_description.xml  package.xml
src/abb_irb4600_60_205_ikfast/config/: basic_config.rviz
src/abb_irb4600_60_205_ikfast/src/: abb_irb4600_60_205_manipulator_ikfast_moveit_plugin.cpp  abb_irb4600_60_205_manipulator_ikfast_solver.cpp
src/abb_irb4600_support/urdf/: irb4600_60_205_macro.xacro
src/abb_model/: CMakeLists.txt  package.xml
src/abb_model/config/: urdf.rviz
src/abb_model/launch/: load_irb4600.launch  test_irb4600.launch
src/abb_model/meshes/abb_irb4600_60_205/visual/: mount.stl
src/abb_model/meshes/kinect/collision/: kinect_sensor_empty.stl
src/abb_model/urdf/: abb_irb4600_60_205.xacro  abb_irb4600_60_205_macro.xacro  camera.xacro  camera_macro.xacro  robot.urdf
src/abb_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_moveit_config/config/: abb_irb4600_60_205.srdf  kinematics.yaml  sensors_3d.yaml
src/abb_moveit_config/launch/: abb_irb4600_60_205_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit.rviz  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/acceptance_test_rrm_1/: CMakeLists.txt  package.xml
src/acceptance_test_rrm_1/scripts/: test_node.py
src/acceptance_test_rrm_1/test/: rrm1.test  test_rrm1.py
src/controlnode/: CMakeLists.txt  package.xml  truck.stl
src/controlnode/src/: Robot.cpp  Robot.h  controlnode.cpp  valid.txt
src/ik_solver_example/: CMakeLists.txt  package.xml
src/ik_solver_example/src/: ik_solver_example.cpp
src/move/: .setup_assistant  CMakeLists.txt  package.xml
src/move/config/: abb_irb4600_60_205.srdf  fake_controllers.yaml  gazebo_abb_irb4600_60_205.urdf
src/move/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit/: .setup_assistant  package.xml
src/moveit/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
src/moveit/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
src/rrm_msgs/: CMakeLists.txt  package.xml
src/rrm_msgs/srv/: Move.srv
src/rrm_simple_robot_model/: CMakeLists.txt  package.xml
src/rrm_simple_robot_model/config/: rrm_cv3.rviz
src/rrm_simple_robot_model/launch/: robot_state_publisher.launch
src/rrm_simple_robot_model/urdf/: arm.urdf
src/trajectory_visualization/: CMakeLists.txt  package.xml
src/trajectory_visualization/src/: trajectory_visualization.cpp
src/zadanie1/: CMakeLists.txt  package.xml  parameters.yaml
src/zadanie1/launch/: zadanie1.launch
src/zadanie1/src/: input.cpp  node.cpp  subscriber.cpp
src/zadanie1/src/model/: Robot.cpp  Robot.h
src/zadanie1/src/service/: AbstractService.cpp  AbstractService.h  MoveAbsoluteService.cpp  MoveAbsoluteService.h  Services.cpp  Services.h
src/zadanie3/: CMakeLists.txt  package.xml
src/zadanie3/src/: Robot.cpp  Robot.h  control.cpp  iksolver.cpp  move.cpp  parameters.py  publisher.cpp  trajectory.cpp  uloha1-grafy-a-parametre.py  uloha2-grafy-a-parametre.py
