<?xml version="1.0"?>
<package format="2">
  <name>acceptance_test_rrm_1</name>
  <version>0.0.0</version>
  <description>The acceptance_test_rrm_1 package</description>

  <maintainer email="michal.dobis@stuba.sk">Michal Dobis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
