<?xml version="1.0"?>
<package format="2">
  <name>ik_solver_example</name>
  <version>0.0.0</version>
  <description>The ik_solver_example package</description>

  <maintainer email="michal.dobis@stuba.sk">Michal Dobis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <exec_depend>eigen_conversions</exec_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
  </export>
</package>
