<?xml version="1.0"?>
<package format="2">
  <name>rrm_simple_robot_model</name>
  <version>0.0.0</version>
  <description>The rrm_simple_robot_model package</description>

  <maintainer email="michaldobis@todo.todo">michaldobis</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
